Corrected the .next-step-header with a clear: both to prevent it from spilling sideways on large monitors.

--- a/wp-content/themes/nextstepmaine-wp-theme/sass/_next-step-menu.scss
+++ b/wp-content/themes/nextstepmaine-wp-theme/sass/_next-step-menu.scss
@@ -3,6 +3,7 @@
 	margin: 0 auto 0 auto ;
 	overflow: auto ;
 	padding: 10px 0 10px 0 ;
+	clear: both ;
 	
 	h1 {
 		float: left ;
